# exp_ass2_ws

./: README.md
ass2_causa/: README.md
ass2_causa/documentation/html/: _r_e_a_d_m_e_8md.html  annotated.html  check__hp_8cpp.html  check__hp_8cpp__incl.map  check__hp_8cpp__incl.md5  check__hp_8h.html  check__hp_8h__dep__incl.map  check__hp_8h__dep__incl.md5  check__hp_8h__incl.map  check__hp_8h__incl.md5  check__hp_8h_source.html  class_k_c_l__rosplan_1_1_my_action_interface-members.html  class_k_c_l__rosplan_1_1_my_action_interface.html  classes.html  classlistener_1_1_hypothesis-members.html  classlistener_1_1_hypothesis.html  dir_000007_000005.html  dir_3fdb3c091ba9c9719aacc21622d1439e.html  dir_5da1328f9ea8d8d91b9b6a76d6fef9c6.html  dir_7c45ea29d7ff07b3f9089a8e23a4b7f2.html  dir_81e3a97226bc82afbdb9655eb5946fa8.html  dir_81e3a97226bc82afbdb9655eb5946fa8_dep.map  dir_b5927e3e796fd9c9e96ed90a69436f72.html  dir_b5927e3e796fd9c9e96ed90a69436f72_dep.map  dir_c50c4ba3da1ee2c1f34732b2cbcad579.html  dir_e4de03f5e6e3ce68faf2fc2a80d13acc.html  dir_f2286d4067b83499b25944743366cbd2.html  exproblab__ass2_2_c_make_lists_8txt.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  go__to__point_8py.html  goto__waypoint_8cpp.html  goto__waypoint_8cpp__incl.map  goto__waypoint_8cpp__incl.md5  goto__waypoint_8h.html  (+64 more)
ass2_causa/documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  (+55 more)
ass2_causa/documentation/latex/: annotated.tex  check__hp_8cpp.tex  check__hp_8cpp__incl.md5  check__hp_8h.tex  check__hp_8h__dep__incl.md5  check__hp_8h__incl.md5  class_k_c_l__rosplan_1_1_my_action_interface.tex  classlistener_1_1_hypothesis.tex  dir_3fdb3c091ba9c9719aacc21622d1439e.tex  dir_5da1328f9ea8d8d91b9b6a76d6fef9c6.tex  dir_7c45ea29d7ff07b3f9089a8e23a4b7f2.tex  dir_81e3a97226bc82afbdb9655eb5946fa8.tex  dir_81e3a97226bc82afbdb9655eb5946fa8_dep.md5  dir_b5927e3e796fd9c9e96ed90a69436f72.tex  dir_b5927e3e796fd9c9e96ed90a69436f72_dep.md5  dir_c50c4ba3da1ee2c1f34732b2cbcad579.tex  dir_e4de03f5e6e3ce68faf2fc2a80d13acc.tex  dir_f2286d4067b83499b25944743366cbd2.tex  exproblab__ass2_2_c_make_lists_8txt.tex  files.tex  go__to__point_8py.tex  goto__waypoint_8cpp.tex  goto__waypoint_8cpp__incl.md5  goto__waypoint_8h.tex  goto__waypoint_8h__dep__incl.md5  goto__waypoint_8h__incl.md5  hierarchy.tex  initialize_8cpp.tex  initialize_8cpp__incl.md5  initialize_8h.tex  initialize_8h__dep__incl.md5  initialize_8h__incl.md5  listener_8py.tex  md__r_e_a_d_m_e.tex  move__arm_8py.tex  moveit__ass2__pkg_2_c_make_lists_8txt.tex  namespaceexproblab__ass2.tex  namespacego__to__point.tex  namespacelistener.tex  namespacemove__arm.tex  (+21 more)
ass2_causa/exproblab_ass2/: CMakeLists.txt  package.xml
ass2_causa/exproblab_ass2/config/: sim.rviz
ass2_causa/exproblab_ass2/launch/: display_my_robot.launch  my_robot_in_the_map.launch  my_services.launch  prof_launcher.launch  rosplan.launch
ass2_causa/exproblab_ass2/pddl/: domain.pddl  new_problem.pddl  problem.pddl
ass2_causa/exproblab_ass2/scripts/: go_to_point.py  listener.py  move_arm.py  replan.py  start.py
ass2_causa/exproblab_ass2/src/: simulation.cpp
ass2_causa/exproblab_ass2/srv/: Cons_IDs.srv  Replan_srv.srv
ass2_causa/exproblab_ass2/urdf/: my_robot.gazebo  my_robot.urdf  my_robot.xacro
ass2_causa/moveit_ass2_pkg/: .setup_assistant  CMakeLists.txt  package.xml
ass2_causa/moveit_ass2_pkg/config/: my_robot.srdf
ass2_causa/moveit_ass2_pkg/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  my_robot_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ass2_causa/rosplan_interface_ass2/: CMakeLists.txt  package.xml
ass2_causa/rosplan_interface_ass2/include/rosplan_interface_ass2/: check_hp.h
ass2_causa/rosplan_interface_ass2/src/: check_hp.cpp  goto_waypoint.cpp  initialize.cpp  take_hint.cpp  test_hp.cpp  test_stuff.cpp
rosplan_demos/rosplan_demos/common/: plan.pddl
